--- a/index.html
+++ b/index.html
@@ -4,54 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeff Martin Photography</title>
-    <style>
-        /* New styles for menu */
-        .menu {
-            display: flex;
-            justify-content: space-between; /* Align items to left and right */
-            align-items: center; /* Vertically center items */
-            padding: 10px; /* Add some padding */
-            background-color: #f0f0f0; /* Light background */
-        }
-
-        .menu-links {
-            list-style: none; /* Remove bullet points */
-            margin: 0;
-            padding: 0;
-        }
-
-        .menu-links li {
-            display: inline; /* Display links horizontally */
-            margin-right: 20px; /* Add space between links */
-        }
-
-        .menu-title {
-            font-weight: bold;
-        }
-
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #f0f0f0; /* Light background */
-            margin-top: 20px; /* Add some space above the footer */
-        }
-
-        .grid-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Adjust column width as needed */
-            grid-gap: 10px; /* Adjust gap between photos */
-        }
-
-        .grid-item {
-            overflow: hidden; /* Hide overflowing content */
-        }
-
-        .grid-item img {
-            width: 100%;
-            height: auto;
-            object-fit: cover; /* Maintain aspect ratio and cover container */
-        }
-    </style>
+    <link rel="stylesheet" href="styles/menu.css">
+    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/footer.css">
 </head>
 <body>
     <nav class="menu">
