--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 
     <div class="grid-container">
         <div class="grid-item">
-            <img src="photos/home/1.jpg" alt="Photo 1">
+            <img src="photos/portfolio/1.jpg" alt="Photo 1">
         </div>
         <div class="grid-item">
-            <img src="photos/home/2.jpg" alt="Photo 2">
+            <img src="photos/portfolio/2.jpg" alt="Photo 2">
         </div>
         <div class="grid-item">
-            <img src="photos/home/3.jpg" alt="Photo 3">
+            <img src="photos/portfolio/3.jpg" alt="Photo 3">
         </div>
         <div class="grid-item">
-            <img src="photos/home/4.jpg" alt="Photo 4">
+            <img src="photos/portfolio/4.jpg" alt="Photo 4">
         </div>
         <div class="grid-item">
-            <img src="photos/home/5.jpg" alt="Photo 5">
+            <img src="photos/portfolio/5.jpg" alt="Photo 5">
         </div>
     </div>
 
