--- a/about/index.html
+++ b/about/index.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Jeff</title>
+    <title>About - Jeff Martin Photography</title>
+    <link rel="stylesheet" href="../styles/menu.css">
+    <link rel="stylesheet" href="../styles/about.css">
+    <link rel="stylesheet" href="../styles/footer.css">
 </head>
 <body>
-
+    <nav class="menu">
+        <ul class="menu-links">
+            <li><a href="/about/">About</a></li>
+            <li><a href="/portfolio/">Portfolio</a></li>
+            <li><a href="https://www.etsy.com/ca/shop/JeffMPhotoStudio" target="_blank">Buy Prints</a></li>
+            <li><a href="/contact">Contact</a></li>
+        </ul>
+        <h1 class="menu-title">Jeff Martin Photography</h1> 
+    </nav>
+    
     <div class="container">
         <div class="left-column">
             <p>
@@ -17,6 +29,10 @@
             <img src="/photos/portfolio/5.jpg" alt="About Image">
         </div>
     </div>
+
+    <footer>
+        <p>&copy; Jeff Martin 2017 - 2024</p>
+    </footer>
 
 </body>
 </html>
