--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <nav class="menu">
         <ul class="menu-links">
-            <li><a href="/about/">About</a></li>
-            <li><a href="/portfolio/">Portfolio</a></li>
+            <li><a href="about/">About</a></li>
+            <li><a href="portfolio/">Portfolio</a></li>
             <li><a href="https://www.etsy.com/ca/shop/JeffMPhotoStudio" target="_blank">Buy Prints</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="contact/">Contact</a></li>
         </ul>
         <h1 class="menu-title">Jeff Martin Photography</h1> 
     </nav>
