--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 
     <div class="grid-container">
         <div class="grid-item">
-            <img src="photos/portfolio/1.jpg" alt="Photo 1">
+            <img src="photos/portfolio/dotonbori-crowd-1.jpg" alt="Photo of Dotonbori Osaka Crowds">
         </div>
         <div class="grid-item">
-            <img src="photos/portfolio/2.jpg" alt="Photo 2">
+            <img src="photos/portfolio/shibuyacrossing-1.jpg" alt="Photo of Shibuya Crossing">
         </div>
         <div class="grid-item">
-            <img src="photos/portfolio/3.jpg" alt="Photo 3">
+            <img src="photos/portfolio/fujisan-railroads-1.jpg" alt="Photo of Fuji-san">
         </div>
         <div class="grid-item">
-            <img src="photos/portfolio/4.jpg" alt="Photo 4">
+            <img src="photos/portfolio/dotonbori-alley.jpg" alt="Photo of Dotonbori Alleyway">
         </div>
         <div class="grid-item">
-            <img src="photos/portfolio/5.jpg" alt="Photo 5">
+            <img src="photos/portfolio/yodobashi-sign-1.jpg" alt="Photo of Yodobashi Camera">
         </div>
     </div>
 
