--- a/about/index.html
+++ b/about/index.html
@@ -22,11 +22,15 @@
     <div class="container">
         <div class="left-column">
             <p>
-              TBA
+              Jeff Martin is a travel and street photographer based in Canada, and photographing the vibrant and busy alleys and nightlife of Asia. Jeff focuses on street landscapes, architecture, and occasionally people, that showcase the essence and soul of the city.
+            </p>
+
+            <p>
+              To view Jeff’s work, you can find his larger collection of photos on his <a href="https://www.instagram.com/jeffm.jpg/" target="_blank">Instagram page</a>, or a finer selection of curated shots on his <a href="../portfolio/">portfolio</a>.
             </p>
         </div>
         <div class="right-column">
-            <img src="/photos/portfolio/5.jpg" alt="About Image">
+            <img src="/photos/portfolio/dotonbori-alley.jpg" alt="About Image">
         </div>
     </div>
 
