--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <h1 class="menu-title">Jeff Martin Photography</h1> 
     </nav>
 
+    <a href="https://www.instagram.com/jeffm.jpg/" target="_blank" class="instagram-link">
+        <img src="assets/Instagram_Glyph_Black.png" alt="Instagram Link"> 
+    </a>
+    
     <div class="grid-container">
         <div class="grid-item">
             <img src="photos/portfolio/dotonbori-crowd-1.jpg" alt="Photo of Dotonbori Osaka Crowds">
