--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="menu">
+    <nav class="menu bebas-neue-regular">
         <ul class="menu-links">
             <li><a href="about/">About</a></li>
             <li><a href="portfolio/">Portfolio</a></li>
