--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
         <h1 class="menu-title">Jeff Martin Photography</h1> 
     </nav>
 
-    <a href="https://www.instagram.com/jeffm.jpg/" target="_blank" class="instagram-link">
-        <img src="assets/Instagram_Glyph_Black.png" alt="Instagram Link"> 
-    </a>
+    <div class="social-links-container">
+        <a href="https://www.instagram.com/jeffm.jpg/" target="_blank" class="instagram-link">
+            <img src="assets/Instagram_Glyph_Black.png" alt="Instagram Link"> 
+        </a>
+    </div>
     
     <div class="grid-container">
         <div class="grid-item">
