--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Handjet&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="menu bebas-neue-regular">
+    <nav class="menu handjet">
         <ul class="menu-links">
             <li><a href="about/">About</a></li>
             <li><a href="portfolio/">Portfolio</a></li>
