Tweaks to theme

--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Handjet&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
-<body>
-    <nav class="menu handjet">
-        <ul class="menu-links">
+<body class="noto-sans-regular">
+    <nav class="menu">
+        <ul class="menu-links oswald">
+            <li><a href="." id="menu-link-active">Home</a></li>
             <li><a href="about/">About</a></li>
             <li><a href="portfolio/">Portfolio</a></li>
             <li><a href="https://www.etsy.com/ca/shop/JeffMPhotoStudio" target="_blank">Buy Prints</a></li>
             <li><a href="contact/">Contact</a></li>
         </ul>
-        <h1 class="menu-title">Jeff Martin Photography</h1> 
+        <h1 class="menu-title noto-sans-semibold">Jeff Martin Photography</h1> 
     </nav>
 
     <div class="social-links-container">
         <a href="https://www.instagram.com/jeffm.jpg/" target="_blank" class="instagram-link">
-            <img src="assets/Instagram_Glyph_Black.png" alt="Instagram Link"> 
+            <img src="assets/Instagram_Glyph_White.png" alt="Instagram Link"> 
         </a>
     </div>
     
@@ -46,6 +47,12 @@
         <div class="grid-item">
             <img src="photos/portfolio/yodobashi-sign-1.jpg" alt="Photo of Yodobashi Camera">
         </div>
+    </div>
+
+    <div class="outro">
+        <p>
+            Jeff Martin is a travel photographer working in and around of Asia. Have a project in mind? <a href="contact/">Let’s work together</a>.
+        </p>
     </div>
 
     <footer>
