--- a/about/index.html
+++ b/about/index.html
@@ -11,21 +11,20 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Oswald:wght@200..700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body class="noto-sans-regular">
     <nav class="menu">
         <ul class="menu-links oswald">
             <li><a href="../">Home</a></li>
             <li><a href="." id="menu-link-active">About</a></li>
-            <li><a href="portfolio/">Portfolio</a></li>
+            <li><a href="../portfolio/">Portfolio</a></li>
             <li><a href="https://www.etsy.com/ca/shop/JeffMPhotoStudio" target="_blank">Buy Prints</a></li>
-            <li><a href="contact/">Contact</a></li>
         </ul>
-        <h1 class="menu-title noto-sans-semibold">Jeff Martin Photography</h1> 
+        <h1 class="menu-title noto-sans-semibold">JM</h1> 
     </nav>
     
-    <div class="container">
+    <div class="container merriweather-regular">
         <div class="left-column">
             <p class="about-me">
               Jeff is a travel and street photographer based in Canada, and photographing the vibrant and busy alleys and nightlife of Asia. Jeff focuses on street landscapes, architecture, and occasionally people, that showcase the essence and soul of the city.
@@ -34,9 +33,13 @@
             <p class="about-me-outro">
               To view Jeff’s work, you can find his larger collection of photos on his <a href="https://www.instagram.com/jeffm.jpg/" target="_blank">Instagram page</a>, or a finer selection of curated shots on his <a href="../portfolio/">portfolio</a>.
             </p>
+
+            <p class="about-me-outro">
+              For all inquiries, email <a href="mailto:jeffmartin.photos@gmail.com">jeffmartin.photos@gmail.com</a>.
+            </p>
         </div>
         <div class="right-column">
-            <img src="../photos/portfolio/dotonbori-alley.jpg" alt="About Image">
+            <img src="../photos/portfolio/japan/dotonbori-alley.jpg" alt="About Image">
         </div>
     </div>
 
