--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Oswald:wght@200..700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body class="noto-sans-regular">
     <nav class="menu">
@@ -20,7 +20,6 @@
             <li><a href="about/">About</a></li>
             <li><a href="portfolio/">Portfolio</a></li>
             <li><a href="https://www.etsy.com/ca/shop/JeffMPhotoStudio" target="_blank">Buy Prints</a></li>
-            <li><a href="contact/">Contact</a></li>
         </ul>
         <h1 class="menu-title noto-sans-semibold">Jeff Martin Photography</h1> 
     </nav>
@@ -33,23 +32,23 @@
     
     <div class="grid-container">
         <div class="grid-item">
-            <img src="photos/portfolio/dotonbori-crowd-1.jpg" alt="Photo of Dotonbori Osaka Crowds">
+            <img src="photos/portfolio/japan/dotonbori-crowd-1.jpg" alt="Photo of Dotonbori Osaka Crowds">
         </div>
         <div class="grid-item">
-            <img src="photos/portfolio/shibuyacrossing-1.jpg" alt="Photo of Shibuya Crossing">
+            <img src="photos/portfolio/japan/shibuyacrossing-1.jpg" alt="Photo of Shibuya Crossing">
         </div>
         <div class="grid-item">
-            <img src="photos/portfolio/fujisan-railroads-1.jpg" alt="Photo of Fuji-san">
+            <img src="photos/portfolio/japan/fujisan-railroads-1.jpg" alt="Photo of Fuji-san">
         </div>
         <div class="grid-item">
-            <img src="photos/portfolio/dotonbori-alley.jpg" alt="Photo of Dotonbori Alleyway">
+            <img src="photos/portfolio/japan/dotonbori-alley.jpg" alt="Photo of Dotonbori Alleyway">
         </div>
         <div class="grid-item">
-            <img src="photos/portfolio/yodobashi-sign-1.jpg" alt="Photo of Yodobashi Camera">
+            <img src="photos/portfolio/japan/yodobashi-sign-1.jpg" alt="Photo of Yodobashi Camera">
         </div>
     </div>
 
-    <div class="outro">
+    <div class="outro merriweather-regular">
         <p>
             Jeff Martin is a travel photographer working in and around of Asia. Have a project in mind? <a href="contact/">Let’s work together</a>.
         </p>
