--- a/about/index.html
+++ b/about/index.html
@@ -15,13 +15,18 @@
 </head>
 <body class="noto-sans-regular">
     <nav class="menu">
+        <div class="menu-top">
+            <h1 class="menu-title noto-sans-semibold">Jeff Martin Photography</h1>
+            <div class="hamburger">
+                <div class="hamburger-icon"></div>
+            </div>
+        </div>
         <ul class="menu-links oswald">
-            <li><a href="../">Home</a></li>
-            <li><a href="." id="menu-link-active">About</a></li>
-            <li><a href="../portfolio/">Portfolio</a></li>
+            <li><a href="." id="menu-link-active">Home</a></li>
+            <li><a href="about/">About</a></li>
+            <li><a href="portfolio/">Portfolio</a></li>
             <li><a href="https://www.etsy.com/ca/shop/JeffMPhotoStudio" target="_blank">Buy Prints</a></li>
         </ul>
-        <h1 class="menu-title noto-sans-semibold">JM</h1> 
     </nav>
     
     <div class="container merriweather-regular">
@@ -47,5 +52,6 @@
         <p>&copy; Jeff Martin 2017 - 2024</p>
     </footer>
 
+    <script src="../scripts/common.js"></script>
 </body>
 </html>
