--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
 </head>
 <body class="noto-sans-regular">
     <nav class="menu">
+        <div class="menu-top">
+            <h1 class="menu-title noto-sans-semibold">Jeff Martin Photography</h1>
+            <div class="hamburger">
+                <div class="hamburger-icon"></div>
+            </div>
+        </div>
         <ul class="menu-links oswald">
             <li><a href="." id="menu-link-active">Home</a></li>
             <li><a href="about/">About</a></li>
             <li><a href="portfolio/">Portfolio</a></li>
             <li><a href="https://www.etsy.com/ca/shop/JeffMPhotoStudio" target="_blank">Buy Prints</a></li>
         </ul>
-        <h1 class="menu-title noto-sans-semibold">Jeff Martin Photography</h1> 
     </nav>
 
     <div class="social-links-container">
@@ -57,5 +62,7 @@
     <footer>
         <p>&copy; Jeff Martin 2017 - 2024</p>
     </footer>
+
+    <script src="scripts/common.js"></script>
 </body>
 </html>
