--- a/portfolio/japan/index.html
+++ b/portfolio/japan/index.html
@@ -23,8 +23,8 @@
         </div>
         <ul class="menu-links oswald">
             <li><a href="." id="menu-link-active">Home</a></li>
-            <li><a href="about/">About</a></li>
-            <li><a href="portfolio/">Portfolio</a></li>
+            <li><a href="../../about/">About</a></li>
+            <li><a href="../../portfolio/">Portfolio</a></li>
             <li><a href="https://www.etsy.com/ca/shop/JeffMPhotoStudio" target="_blank">Buy Prints</a></li>
         </ul>
     </nav>
