Updates to menu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="noto-sans-regular">
     <nav class="menu">
         <div class="menu-top">
-            <h1 class="menu-title noto-sans-semibold">Jeff Martin Photography</h1>
+            <a href="."><h1 class="menu-title noto-sans-semibold">Jeff Martin Photography</h1></a>
             <div class="hamburger">
                 <div class="hamburger-icon"></div>
             </div>
