New portfolio sections

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
     
     <div class="grid-container">
         <div class="grid-item">
-            <img src="photos/portfolio/japan/dotonbori-crowd-1.jpg" alt="Photo of Dotonbori Osaka Crowds">
+            <img src="photos/portfolio/japan/dotonbori-crowd-1.jpg">
         </div>
         <div class="grid-item">
-            <img src="photos/portfolio/japan/shibuyacrossing-1.jpg" alt="Photo of Shibuya Crossing">
+            <img src="photos/portfolio/singapore/stairs.jpg">
         </div>
         <div class="grid-item">
-            <img src="photos/portfolio/japan/fujisan-railroads-1.jpg" alt="Photo of Fuji-san">
+            <img src="photos/portfolio/thailand/bridge-jatujak.jpg">
         </div>
         <div class="grid-item">
-            <img src="photos/portfolio/japan/dotonbori-alley.jpg" alt="Photo of Dotonbori Alleyway">
+            <img src="photos/portfolio/singapore/jewel-waterfall.jpg">
         </div>
         <div class="grid-item">
-            <img src="photos/portfolio/japan/yodobashi-sign-1.jpg" alt="Photo of Yodobashi Camera">
+            <img src="photos/portfolio/japan/yodobashi-sign-1.jpg">
         </div>
     </div>
 
