--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -40,8 +40,20 @@
                 <img src="../photos/portfolio/japan/shibuyacrossing-1.jpg" alt="Japan Portfolio">
             </a>
         </div>
-        <!-- <div class="portfolio-menu-grid-item">
-            <h3>Iceland</h3>
+        <div class="portfolio-menu-grid-item">
+            <a href="singapore/">
+                <h3>Singapore</h3>
+                <img src="../photos/portfolio/singapore/supertree.jpg" alt="Singapore Portfolio">
+            </a>
+        </div>
+        <div class="portfolio-menu-grid-item">
+            <a href="thailand/">
+                <h3>Thailand</h3>
+                <img src="../photos/portfolio/thailand/bridge-jatujak.jpg" alt="Thailand Portfolio">
+            </a>
+        </div>
+        <!-- <div class="portfolio-menu-grid-item"></div>
+            <h3>TBA</h3>
             <img src="../photos/portfolio/japan/shibuyacrossing-1.jpg" alt="Iceland Portfolio">
         </div>
         <div class="portfolio-menu-grid-item">
