--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div class="outro merriweather-regular">
         <p>
-            Jeff Martin is a travel photographer working in and around of Asia. Have a project in mind? <a href="mailto:jeffmartin.photos@gmail.com">Let's work together</a>.
+            Jeff Martin is a travel and cityscape photographer based in Toronto. Have a project in mind? <a href="mailto:jeffmartin.photos@gmail.com">Let's work together</a>.
         </p>
     </div>
 
